--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "strictPropertyInitialization": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDeclarationOnly": true
   },
   "exclude": [
     "node_modules"
