added validation and config service

--- a/package.json
+++ b/package.json
@@ -5,28 +5,39 @@
   "main": "main.ts",
   "scripts": {
     "start": "nodemon src/main.ts",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:fix": "eslint ./src/** --fix",
-    "lint": "eslint ./src/**"
+    "lint": "eslint ./src/**",
+    "build": "tsc",
+    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:3306 -r ts-node/register src/main.ts",
+    "autoclinick": "clinic doctor --sample-interval 120 --on-port 'autocannon -m POST localhost:$PORT/users/register' --stop-delay 1000 -- node dist/main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "minimalistic": "^1.0.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "typescript-eslint": "0.0.1-alpha.0"
   }
